// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component renders correctly when authenticated 1`] = `
<Text
  testID="auth-navigator-undefined-not-admin"
/>
`;

exports[`App Component renders correctly when not authenticated 1`] = `
<Text
  testID="guest-navigator"
/>
`;
